--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -9,6 +9,8 @@
 - @posts.each do |post|
   %p= post.title
   %p= post.body
+  = link_to 'Like', post_likes_path(post), method: :post
+  %span Has #{ pluralize post.likes.count, 'like' }
   - post.comments.each do |comment|
     = comment.content
     = comment.created_at
